Substitucio de _id a User per username. _id hauria de ser de coneixament intern.
